--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 /***********************************************************/
 /** RESET **************************************************/
 /***********************************************************/
+[class*="elementor"] ul, 
+[class*="elementor"] ol {
+
+}
 [class*="elementor"] h1,
 [class*="elementor"] h2,
 [class*="elementor"] h3,
@@ -23,7 +27,6 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 [class*="elementor"] h6{
 	margin: 0 0 20px;
 }
-'
 [class*="elementor"] p:last-of-type {
     margin: 0;
 }
